--- a/html/enviarMensaje.html
+++ b/html/enviarMensaje.html
@@ -6,19 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Formulario de contacto</title>
 
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="css/font-awesome.css">
 
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
-
+<!---Este formulario confirma que el mensaje ha sido enviado con exito y puede
+               cerrar la session o volver a enviar un mensaje-->
     <section class="form_wrap">
 
         <section class= "mensaje-exito">
             <h1>SU MENSAJE SE ENVÌO CON EXITO</h1>
-            <a href="index.html">Enviar nuevo mensaje</a>
+            <a href="../html/formularioProductos.html">Enviar nuevo mensaje</a>
+            <br>
+            <br>
+        
+            <a href="../html/loginvista.html">Cerrar Session</a>
         </section>
 
 
