--- a/html/enviarMensaje.html
+++ b/html/enviarMensaje.html
@@ -18,7 +18,7 @@
     <section class="form_wrap">
 
         <section class= "mensaje-exito">
-            <h1>SU MENSAJE SE ENVÌO CON EXITO</h1>
+            <h1>SU MENSAJE SE ENVIÓ CON ÉXITO</h1>
             <a href="../html/formularioProductos.html">Enviar nuevo mensaje</a>
             <br>
             <br>
