--- a/html/paneldeControl.html
+++ b/html/paneldeControl.html
@@ -34,7 +34,7 @@
                 <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-apps lead mr-2"></i>
                     Tablero</a>
 
-                <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
+                <a href="paneldeControlUsers.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
                     Usuarios</a>
 
                 <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-stats lead mr-2"></i>
