--- a/html/paneldeControlUsers.html
+++ b/html/paneldeControlUsers.html
@@ -139,7 +139,7 @@
                   </div>
               </section>
 
-             <section
+             <section>
 			 <center>
 			 <!-- Buttons to choose list or grid view -->
 <button onclick="listView()"><i class="fa fa-bars"></i> List</button>
@@ -147,23 +147,56 @@
 
 <div class="row">
   <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
+    <h2>Adrian Campos</h2>
+    <p>123456</p>
   </div>
   <div class="column" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
+    <h2>William Courrau</h2>
+    <p>654321</p>
   </div>
 </div>
 
 <div class="row">
   <div class="column" style="background-color:#ccc;">
-    <h2>Column 3</h2>
-    <p>Some text..</p>
+    <h2>Michael Monge</h2>
+    <p>456123</p>
   </div>
   <div class="column" style="background-color:#ddd;">
-    <h2>Column 4</h2>
-    <p>Some text..</p>
+    <h2>Alexa Madriz</h2>
+    <p>321456</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Emmanuel Flores</h2>
+    <p>836037</p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Luis Cubillo</h2>
+    <p>729548</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column" style="background-color:#ccc;">
+    <h2>Danny Lam</h2>
+    <p>462937</p>
+  </div>
+  <div class="column" style="background-color:#ddd;">
+    <h2>Karl Aase</h2>
+    <p>127129</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Jeffrey López</h2>
+    <p>128072</p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Andres Miranda</h2>
+    <p>173839</p>
   </div>
 </div>
 </center>
