--- a/html/paneldeControlJefe.html
+++ b/html/paneldeControlJefe.html
@@ -32,15 +32,15 @@
             </div>
             <div class="menu">
                 <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-apps lead mr-2"></i>
-                    Tablero</a>
+                    Panel de control</a>
 
-                <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
-                    Usuarios</a>
+                <a href="paneldeControlUsers.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
+                    Usuarios Registrados</a>
 
-                <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-stats lead mr-2"></i>
-                    Graficos</a>
-                <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-person lead mr-2"></i>
-                    Perfil</a>
+                <a href="paneldeReportes.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-stats lead mr-2"></i>
+                    Reportes</a>
+                <a href="manejoUsuarios.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-person lead mr-2"></i>
+                    Control de Usuarios</a>
                 
             </div>
         </div>
