--- a/html/paneldeControl.html
+++ b/html/paneldeControl.html
@@ -94,7 +94,7 @@
                             <p class="lead text-muted">Última información</p>
                           </div>
                           <div class="col-lg-3 col-md-4 d-flex">
-                            <button class="btn btn-primary w-100 align-self-center">Descargar reporte</button>
+                            <button class="btn btn-primary w-100 align-self-center"><a style = "color: white" href= "paneldeReportes.html">Resumen Reporte</a></button>
                           </div>
                       </div>
                   </div>
