Comentado las nuevas ventanas

--- a/html/manejoUsuarios.html
+++ b/html/manejoUsuarios.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!---Control de los usuarios para los diferentes niveles del sistema.-->
     <meta charset="utf-8">
 
     <title>Control de Perfil</title>
