--- a/html/paneldeControlJefe.html
+++ b/html/paneldeControlJefe.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
-
+<!--
+    Esta venta es un dashboard que maneja el control de los diferentes 
+    funciones de estos para que puedan actualizar las transacciones de los clientes.
+    --->
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
