--- a/html/paneldeControlUsers.html
+++ b/html/paneldeControlUsers.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+  <!---Ventana para tener un control de los usuarios dentro del sistema de proveeduria 
+  como poder eliminar usuario o agregar al sistema
+-->
 
 <head>
     <!-- Required meta tags -->
