--- a/html/paneldeReportes.html
+++ b/html/paneldeReportes.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-
+<!--- Control de los reportes tanto rechazadas y aprobadas de los clientes 
+          en historial hasta de los 6 meses pasados.  -->
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
