--- a/html/MenuUsuario.html
+++ b/html/MenuUsuario.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--Este menu muestra un pequeño menu para el estudiante que muestre los formularios recientes o realizar un formulario.-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
