Cambios de nombres
Se cambiaron los nombres de algunos HTML para mas facilidad al manipularlos

--- a/html/MenuUsuario.html
+++ b/html/MenuUsuario.html
@@ -25,7 +25,7 @@
 
         </section>
         <form action="" method="" class="form_contact">
-            <a href="formularioProductos.html" class="btn btn-primary btn-lg active" role="button"
+            <a href="solicitarProductos.html" class="btn btn-primary btn-lg active" role="button"
                 aria-pressed="true">Enviar Solicitud</a>
             <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Comprobar
                 solicitudes</a>
