--- a/html/administracionUsuarios.html
+++ b/html/administracionUsuarios.html
@@ -77,7 +77,7 @@ body{
       <!-- Breadcrumb -->
       <nav aria-label="breadcrumb" class="main-breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="paneldeControlJefe.html">Panel De Control</a></li>
+          <li class="breadcrumb-item"><a href="panelControl_Jefe_Finan.html">Panel De Control</a></li>
           
           <li class="breadcrumb-item active" aria-current="page">Ajuste de perfil</li>
         </ol>
