--- a/html/enviarMensaje.html
+++ b/html/enviarMensaje.html
@@ -19,11 +19,11 @@
 
         <section class= "mensaje-exito">
             <h1>SU MENSAJE SE ENVIÓ CON ÉXITO</h1>
-            <a href="../html/formularioProductos.html">Enviar nuevo mensaje</a>
+            <a href="../html/solicitarProductos.html">Enviar nuevo mensaje</a>
             <br>
             <br>
         
-            <a href="../html/loginvista.html">Cerrar Session</a>
+            <a href="../html/loginPrincipal.html">Cerrar Session</a>
         </section>
 
 
