--- a/html/panelControl_Aprob_Finan.html
+++ b/html/panelControl_Aprob_Finan.html
@@ -34,7 +34,7 @@
                 <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-apps lead mr-2"></i>
                     Tablero</a>
 
-                <a href="paneldeControlUsers.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
+                <a href="panelControl_Usuarios.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
                     Usuarios</a>
 
                 <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-stats lead mr-2"></i>
@@ -74,7 +74,7 @@
                       <a class="dropdown-item" href="#">Mi perfil</a>
                       
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="../html/loginvista.html">Cerrar sesión</a>
+                      <a class="dropdown-item" href="../html/loginPrincipal.html">Cerrar sesión</a>
                     </div>
                   </li>
                 </ul>
@@ -94,7 +94,7 @@
                             <p class="lead text-muted">Última información</p>
                           </div>
                           <div class="col-lg-3 col-md-4 d-flex">
-                            <button class="btn btn-primary w-100 align-self-center"><a style = "color: white" href= "paneldeReportes.html">Resumen Reporte</a></button>
+                            <button class="btn btn-primary w-100 align-self-center"><a style = "color: white" href= "panelReportes_Mensuales_Finan.html">Resumen Reporte</a></button>
                           </div>
                       </div>
                   </div>
