--- a/html/panelControl_Jefe_Finan.html
+++ b/html/panelControl_Jefe_Finan.html
@@ -37,12 +37,12 @@
                 <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-apps lead mr-2"></i>
                     Panel de control</a>
 
-                <a href="paneldeControlUsers.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
+                <a href="panelControl_Usuarios.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
                     Usuarios Registrados</a>
 
-                <a href="paneldeReportes.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-stats lead mr-2"></i>
+                <a href="panelReportes_Mensuales_Finan.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-stats lead mr-2"></i>
                     Reportes</a>
-                <a href="manejoUsuarios.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-person lead mr-2"></i>
+                <a href="administracionUsuarios.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-person lead mr-2"></i>
                     Control de Usuarios</a>
                 
             </div>
@@ -77,7 +77,7 @@
                       <a class="dropdown-item" href="#">Mi perfil</a>
                       
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="../html/loginvista.html">Cerrar sesión</a>
+                      <a class="dropdown-item" href="../html/loginPrincipal.html">Cerrar sesión</a>
                     </div>
                   </li>
                 </ul>
