--- a/html/panelControl_Usuarios.html
+++ b/html/panelControl_Usuarios.html
@@ -75,7 +75,7 @@
                 <h4 class="text-light font-weight-bold mb-0">Proveeduria</h4>
             </div>
             <div class="menu">
-                <a href="paneldeControl.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-apps lead mr-2"></i>
+                <a href="panelControl_Aprob_Finan.html" class="d-block text-light p-3 border-0"><i class="icon ion-md-apps lead mr-2"></i>
                     Tablero</a>
 
                 <a href="#" class="d-block text-light p-3 border-0"><i class="icon ion-md-people lead mr-2"></i>
@@ -118,7 +118,7 @@
                       <a class="dropdown-item" href="#">Mi perfil</a>
                       
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="../html/loginvista.html">Cerrar sesión</a>
+                      <a class="dropdown-item" href="../html/loginPrincipal.html">Cerrar sesión</a>
                     </div>
                   </li>
                 </ul>
