--- a/html/registrarvista.html
+++ b/html/registrarvista.html
@@ -38,7 +38,7 @@
          </div>
          <input type="submit" value="Registrate" class="button">
          <p>Al registrarte, aceptas nuestras Condiciones de uso y Política de privacidad.</p>
-         <p>¿Ya tienes una cuenta?<a class="link" href="../html/loginvista.html">Iniciar Sesion</a></p>
+         <p>¿Ya tienes una cuenta?<a class="link" href="../html/loginPrincipal.html">Iniciar Sesion</a></p>
      </div>
     </form>
 </body>
